QTI ExtendedText interaction issues (not visible border, undefined correct response when switching from xhtml format to another one)
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/taoQtiItem/trunk@20557 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/scss/qti/_extended-text.scss
+++ b/views/scss/qti/_extended-text.scss
@@ -27,5 +27,10 @@
         width: 100%;
         height: 150px;
         resize: none;
+        
+        &[disabled="disabled"] {
+        	background-color: white;
+        	opacity: 1 !important;
+        }
     }
 }
